# SkillCoach-MetaHack

./: README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  skillcoach_env.py  tasks.py  validate.py
server/: app.py
